<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoesViewModel"
            type="com.example.shoeswindow.viewmodels.ShoesListViewModel" />

<!--        <variable-->
<!--            name="shoesItem"-->
<!--            type="com.example.shoeswindow.models.Shoe" />-->

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_dark"
            tools:context=".screens.home.ShoeDetailsFragment">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/app_logo"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/shoes_sneakers" />

            <TextView
                android:id="@+id/textView7"
                style="@style/normal_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/add_new_shoes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <EditText
                android:id="@+id/shoeCompany_et"
                style="@style/login_et_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/company"
                android:inputType="textPersonName"
                android:onTextChanged="@{(text,start,before,count)->shoesViewModel.setCompany(text.toString())}"
                app:layout_constraintBottom_toTopOf="@+id/shoeSize_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeName_et" />

            <EditText
                android:id="@+id/shoeSize_et"
                style="@style/login_et_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/size"
                android:inputType="number"
                android:onTextChanged="@{(text,start,before,count)->shoesViewModel.setSize(text.toString())}"
                app:layout_constraintBottom_toTopOf="@+id/shoeDiscription_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeCompany_et" />

            <EditText
                android:id="@+id/shoeName_et"
                style="@style/login_et_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:onTextChanged="@{(text,start,before,count)->shoesViewModel.setName(text.toString())}"
                app:layout_constraintBottom_toTopOf="@+id/shoeCompany_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_chainStyle="spread" />

            <EditText
                android:id="@+id/shoeDiscription_et"
                style="@style/login_et_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:onTextChanged="@{(text,start,before,count)->shoesViewModel.setDescription(text.toString())}"
                app:layout_constraintBottom_toTopOf="@+id/save_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeSize_et" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/my_accent_color"
                android:onClick="@{() -> shoesViewModel.addToShoesList()}"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/dark_button_color"
                android:onClick="@{() -> shoesViewModel.navigateBack()}"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>